add button for yeshivaStudents and graduate

--- a/EduPortal-client/src/app/Components/home/home.component.html
+++ b/EduPortal-client/src/app/Components/home/home.component.html
@@ -1,3 +1,5 @@
-<div class="home-container">
-<button (click)="goToUpload()"  class="upload-btn">להעלאת קובץ אקסל</button>
+<div class="home-wrapper">
+  <button (click)="goToUploadExcel()" class="upload-btn excel-btn">להעלאת קובץ אקסל</button>
+  <button (click)="goToUploadYeshiva()" class="upload-btn yeshiva-btn">להעלאת קובץ אברכים חדש</button>
+  <button (click)="goToUploadGraduate()" class="upload-btn graduate-btn">להעלאת קובץ בוגרים חדש</button>
 </div>
