--- a/EduPortal-client/src/app/app.component.html
+++ b/EduPortal-client/src/app/app.component.html
@@ -1,3 +1,10 @@
+<ngx-spinner
+  bdColor="rgba(0,0,0,0.5)"
+  color="#4a90e2"
+  type="ball-scale-multiple"
+  [fullScreen]="true"
+>
+  <img src="assets/three-dots.svg" width="100" />
+</ngx-spinner>
 
 <router-outlet></router-outlet>
-
